# DMRG

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENSE  README.md  build.sh  pyproject.toml  setup.py
.github/workflows/: ci.yml
docs/: Makefile  dmrg_pedagogical.tex  theory.md
examples/: anisotropic_triangular.cpp  benchmark_gpu_svd.cpp  benchmark_sssf.cpp  generic_lattice.cpp  heisenberg_chain.cpp  heisenberg_chain.py  heisenberg_gpu.cpp  heisenberg_square_finite.cpp  heisenberg_square_j1j2.cpp  hubbard_2d.cpp  structure_factor.cpp  tfim.py
examples/configs/: heisenberg_chain.yaml
include/idmrg/: all.h  config.h  gpu.h  idmrg.h  observer.h  structure_factor.h
include/idmrg/gpu/: gpu_backend.h  gpu_contraction.h  gpu_svd.h  gpu_tensor.h  itensor_gpu.h
include/idmrg/lattice/: chain.h  honeycomb.h  lattice.h  square.h  triangular.h
include/idmrg/models/: anisotropic_triangular.h  heisenberg.h  hubbard.h  tj.h
include/idmrg/util/: io.h  timer.h
src/: main.cpp
src/dmrg_pp/: __init__.py  _version.py  cli.py
src/dmrg_pp/algorithms/: __init__.py  dmrg.py  eigensolver.py  environments.py
src/dmrg_pp/io/: __init__.py  config.py  hdf5.py
src/dmrg_pp/measurements/: __init__.py  correlations.py  entanglement.py  observables.py
src/dmrg_pp/models/: __init__.py  base.py  heisenberg.py  hubbard.py  ising.py
src/dmrg_pp/operators/: __init__.py  builder.py  local_ops.py  mpo.py
src/dmrg_pp/states/: __init__.py  mps.py  random.py
src/dmrg_pp/tensors/: __init__.py  linalg.py
src/dmrg_pp/utils/: __init__.py  logging.py  threading.py
src/gpu/: gpu_contraction.cu  gpu_contraction_hip.cpp  gpu_svd.cu  gpu_svd_hip.cpp  gpu_tensor.cu  gpu_tensor_hip.cpp
src/include/: dmrg_solver.h  hamiltonian.h  lattice.h
tests/: conftest.py  test_dmrg.py  test_io.py  test_mpo.py  test_mps.py  test_tensors.py
